# PolkaMesh-Contracts

./: README.md
ai_job_queue/: Cargo.toml  README.md  lib.rs
ai_job_queue/src/: lib.rs
compute_provider_registry/: Cargo.toml  README.md  lib.rs
data_nft_registry/: Cargo.toml  README.md  lib.rs
deployments/: paseo.json
mev_protection/: Cargo.toml  README.md
mev_protection/src/: lib.rs
payment_escrow/: Cargo.toml  README.md  lib.rs
phala_job_processor/: Cargo.toml  README.md
phala_job_processor/src/: lib.rs
