[package]
name = "phala_job_processor"
version = "0.1.0"
edition = "2021"

[dependencies]
ink = { version = "5.0", default-features = false, features = ["std"] }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"] }

[lib]
path = "src/lib.rs"

[features]
default = ["std"]
std = ["ink/std", "scale/std", "scale-info/std"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
